--- a/functions/test-db/json2/humanrightsdeclaration/templates/faq.hbs
+++ b/functions/test-db/json2/humanrightsdeclaration/templates/faq.hbs
@@ -42,7 +42,7 @@
 <p>
     Once we have received your sign-up form, we will put your organisation name and logo on to the 
     signatory list on the website 
-    <a href="https://www.declarationhumanrights.scot">http://www.declarationhumanrights.scot</a>  
+    <a href="https://humanrightsdeclaration.scot">www.humanrightsdeclaration.scot</a>  
     We will include your organisation in the public list of signatories. We will invite as many 
     signatories as possible to an event to highlight the Declaration in early 2018.
 </p>
