Trying new font

--- a/functions/test-db/json2/scvo/scvo-styles.scss
+++ b/functions/test-db/json2/scvo/scvo-styles.scss
@@ -1,5 +1,5 @@
 @import url('//cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css');
-@import url('//fonts.googleapis.com/css?family=Open+Sans:400,600,700');
+@import url('//fonts.googleapis.com/css?family=Montserrat:700|Open+Sans:400,600');
 
 $spacing-unit: 1rem;
 $nav-height: 38px;
@@ -1436,7 +1436,7 @@ h1.mdc-typography--title {
         float: left;
     }
     dt {
-        font-weight: bold;
+        font-weight: 600;
         clear: both;
         width: 30%;
     }
@@ -1725,9 +1725,10 @@ h2,
 h3,
 h4 {
     margin-bottom: $spacing-unit/4;
-    font-weight: 600;
+    font-family: "Montserrat", "Open Sans", Helvetica, Arial, sans-serif;
+    font-weight: 700;
     strong {
-        font-weight: 600;
+        font-weight: 700;
     }
 }
 p {
