New trustee search & header issues

--- a/functions/test-db/json2/scvo/scvo-styles.scss
+++ b/functions/test-db/json2/scvo/scvo-styles.scss
@@ -485,10 +485,14 @@ body {
 .mdc-simple-menu .mdc-list-item,
 .mdc-temporary-drawer .mdc-list-item,
 .mdc-list {
-    font-family: 'Open Sans', Helvetica, sans-serif;
+    font-family: "Open Sans", Helvetica, Arial, sans-serif;
 }
 .mdc-temporary-drawer .mdc-list-item {
     font-weight: 600;
+}
+.mdc-typography--title {
+    font-family: "Montserrat", "Open Sans", Helvetica, Arial, sans-serif;
+    font-weight: 700;
 }
 .mdc-typography {
     padding: 0;
@@ -1176,6 +1180,7 @@ a:hover {
 }
 .digital.charter-fund.projects .page-info,
 .digital.cyber-resilience.projects .page-info,
+.projects-campaigns.terrific-trustees.search .page-info,
 .blogs .page-sidebar .page-info,
 .policy-research.briefings-consultation-responses .mdc-card__actions,
 .policy-research.research .mdc-card__actions,
