--- a/functions/test-db/json2/scvo/templates/post-category-head-tags.hbs
+++ b/functions/test-db/json2/scvo/templates/post-category-head-tags.hbs
@@ -1,7 +1,7 @@
 {{#if primaryResponse.hits.hits.[0]}}
     {{#with primaryResponse.hits.hits.[0]._source}}
-        <title>SCVO – Posts in {{#each primaryResponse.hits.hits.[0]._source.categories_slug}}{{#compare this "===" (lastItem (split ../params.path '_'))}}{{{lookup ../primaryResponse.hits.hits.[0]._source.categories @index}}}{{/compare}}{{/each}}</title>
-        <meta property="og:title" content="SCVO – Posts in {{#each primaryResponse.hits.hits.[0]._source.categories_slug}}{{#compare this "===" (lastItem (split ../params.path '_'))}}{{{lookup ../primaryResponse.hits.hits.[0]._source.categories @index}}}{{/compare}}{{/each}}" data-dynamic="true">
+        <title>SCVO – Posts in {{#each categories_slug}}{{#compare this "===" (lastItem (split ../params.path '_'))}}{{{lookup ../categories @index}}}{{/compare}}{{/each}}</title>
+        <meta property="og:title" content="SCVO – Posts in {{#each categories_slug}}{{#compare this "===" (lastItem (split ../params.path '_'))}}{{{lookup ../categories @index}}}{{/compare}}{{/each}}" data-dynamic="true">
 
         {{#ifAny og_image ../og_image}}
             <meta property="og:image" content="{{default og_image ../og_image}}" data-dynamic="true">
