--- a/functions/test-db/json2/scvo/templates/trustee-search.hbs
+++ b/functions/test-db/json2/scvo/templates/trustee-search.hbs
@@ -37,6 +37,9 @@
                             <input type="text" class="mdc-textfield__input" name="q" id="trustee-keywords" value="{{params.query.q}}" placeholder="Search query">
                             <div class="mdc-textfield__bottom-line"></div>
                         </div>
+                        <button class="mdc-button mdc-button--raised" type="submit">
+                            Search
+                        </button>
                     </form>
 
                     <hr />
