--- a/functions/test-db/json2/scvo/templates/layout.hbs
+++ b/functions/test-db/json2/scvo/templates/layout.hbs
@@ -129,22 +129,22 @@
                                     <ul class="mdc-list">
                                         <li class="mdc-list-item">
                                             <a href="mailto:enquiries@scvo.org.uk">
-                                                enquiries@scvo.org.uk
+                                                <span class="fa fa-envelope"></span> enquiries@scvo.org.uk
                                             </a>
                                         </li>
                                         <li class="mdc-list-item">
                                             <a href="tel:+441314748000">
-                                                0131 474 8000
-                                            </a>
-                                        </li>
-                                        <li class="mdc-list-item">
-                                            <a href="https://www.facebook.com/SCVO1939">
-                                                Facebook
+                                                <span class="fa fa-phone-square"></span> 0131 474 8000
                                             </a>
                                         </li>
                                         <li class="mdc-list-item">
                                             <a href="https://twitter.com/scvotweet">
-                                                Twitter
+                                                <span class="fa fa-twitter-square"></span> Twitter
+                                            </a>
+                                        </li>
+                                        <li class="mdc-list-item">
+                                            <a href="https://www.facebook.com/SCVO1939">
+                                                <span class="fa fa-facebook-square"></span> Facebook
                                             </a>
                                         </li>
                                     </ul>
