--- a/functions/test-db/json2/scvo/scvo-styles.scss
+++ b/functions/test-db/json2/scvo/scvo-styles.scss
@@ -480,6 +480,7 @@ body {
 .mdc-card__title--large,
 .mdc-typography--caption,
 .mdc-typography--headline,
+.supplimentary-list-title,
 .mdc-card__supporting-text,
 .mdc-typography--subheading2,
 .mdc-simple-menu .mdc-list-item,
@@ -490,6 +491,9 @@ body {
 .mdc-temporary-drawer .mdc-list-item {
     font-weight: 600;
 }
+.mdc-card__title,
+.mdc-typography--headline,
+.supplimentary-list-title,
 .mdc-typography--title {
     font-family: "Montserrat", "Open Sans", Helvetica, Arial, sans-serif;
     font-weight: 700;
@@ -647,7 +651,7 @@ a:hover {
 }
 .gist {
     h3.mdc-card__title {
-        font-size: 1.2rem;
+        font-size: 1.1rem;
         line-height: 1.4;
     }
     a.thumbnail:after {
@@ -1237,7 +1241,7 @@ a:hover {
     letter-spacing: normal;
     line-height: 1.7rem;
     margin: 0;
-    padding: 0 0 $spacing-unit/2;
+    padding: 0;
     font-weight: 600 !important;
 }
 h1.mdc-typography--title {
@@ -1294,6 +1298,9 @@ h1.mdc-typography--title {
         background-size: cover;
         background-repeat: no-repeat;
         background-position: center center;
+    }
+    .mdc-card__supporting-text {
+        padding-top: 0;
     }
 }
 .section-projects {
