--- a/functions/test-db/json2/scvo/templates/evidence-library-document-search.hbs
+++ b/functions/test-db/json2/scvo/templates/evidence-library-document-search.hbs
@@ -26,6 +26,12 @@
             <div class="mdc-layout-grid__inner">
                 <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3 sidebar library-sidebar">
                     {{> library_search}}
+
+                    <hr />
+
+                    <p>
+                        The Evidence Library is a resource for anyone interested in learning about the third sector in Scotland. The database is regularly being added to and visitors are encouraged to submit their research for possible inclusion on the site. For further information, please email: <a href="mailto:research@scvo.org.uk">research@scvo.org.uk</a>
+                    </p>
                 </div>
                 <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-9 content library-content">
                     {{#each primaryResponse.hits.hits}}
