--- a/functions/test-db/json2/scvo/partials/library-search.hbs
+++ b/functions/test-db/json2/scvo/partials/library-search.hbs
@@ -1,4 +1,4 @@
-<form [searchroute]="'evidence-library'" data-auto-search="true">
+<form [searchroute]="'evidence_library_document_search'" data-auto-search="true">
     <div class="mdc-textfield mdc-textfield--upgraded">
         <input type="text" class="mdc-textfield__input" name="q" id="evidence-library-keywords" value="{{params.query.q}}" placeholder="Search query">
         <div class="mdc-textfield__bottom-line"></div>
@@ -11,4 +11,7 @@
             {{/each}}
         </select>
     </div>
+    <button class="mdc-button mdc-button--raised" type="submit">
+        Search
+    </button>
 </form>
