Updated font icons on home page

--- a/functions/test-db/json2/scvo/scvo-styles.scss
+++ b/functions/test-db/json2/scvo/scvo-styles.scss
@@ -147,6 +147,7 @@ primary-dark: #251032
 
     a,
     .post-info .post-info-categories .fa,
+    .post-info .post-info-categories .fal,
     #share-menu-button,
     .mdc-simple-menu .mdc-list-item,
     .container-content ul li::before,
@@ -596,7 +597,7 @@ a:hover {
         background-position: center center;
         height: auto;
         padding: $spacing-unit 0 $spacing-unit*3.25;
-        h2, h3, a, .fa {
+        h2, h3, a, .fa, .fal, .fab, .fas {
             color: white;
         }
         h2 {
@@ -609,7 +610,7 @@ a:hover {
             }
             h3 {
                 margin: 0;
-                .fa {
+                .fal {
                     border: $spacing-unit/8 solid white;
                     border-radius: 50%;
                     padding: $spacing-unit*1.75;
@@ -746,7 +747,7 @@ a:hover {
     .name_full {
         font-weight: 600;
     }
-    .fa {
+    .fal {
         font-size: 1.4rem;
     }
 }
@@ -1474,16 +1475,16 @@ h1.mdc-typography--title {
             top: 0em;
         }
     }
-    ul.fa-ul {
-        li {
-            padding-left: 0;
-        }
-        li::before {
-            content: " ";
-            padding: 0;
-            margin: 0;
-        }
-    }
+    // ul.fa-ul {
+    //     li {
+    //         padding-left: 0;
+    //     }
+    //     li::before {
+    //         content: " ";
+    //         padding: 0;
+    //         margin: 0;
+    //     }
+    // }
     .mdc-button {
         background: white;
         border-width: $spacing-unit/8;
@@ -1837,32 +1838,32 @@ p:last-child {
     }
 }
 
-.fa {
-    display: inline-block;
-    font: normal normal normal 14px/1 FontAwesome;
-    font-size: inherit;
-    text-rendering: auto;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-}
+// .fa {
+//     display: inline-block;
+//     font: normal normal normal 14px/1 FontAwesome;
+//     font-size: inherit;
+//     text-rendering: auto;
+//     -webkit-font-smoothing: antialiased;
+//     -moz-osx-font-smoothing: grayscale;
+// }
 /* makes the font 33% larger relative to the icon container */
-.fa-lg {
-    font-size: 1.33333333rem;
-    line-height: 0.75rem;
-    vertical-align: -15%;
-}
-.fa-2x {
-    font-size: 2rem;
-}
-.fa-3x {
-    font-size: 3rem;
-}
-.fa-4x {
-    font-size: 4rem;
-}
-.fa-5x {
-    font-size: 5rem;
-}
+// .fa-lg {
+//     font-size: 1.33333333rem;
+//     line-height: 0.75rem;
+//     vertical-align: -15%;
+// }
+// .fa-2x {
+//     font-size: 2rem;
+// }
+// .fa-3x {
+//     font-size: 3rem;
+// }
+// .fa-4x {
+//     font-size: 4rem;
+// }
+// .fa-5x {
+//     font-size: 5rem;
+// }
 
 .inline-icon {
     vertical-align: middle;
