--- a/functions/test-db/json2/scvo/templates/home.hbs
+++ b/functions/test-db/json2/scvo/templates/home.hbs
@@ -58,7 +58,7 @@
                 <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3 mdc-layout-grid__cell--span-12-tablet mdc-layout-grid__cell--span-12-phone">
                     <h3>
                         <a href="/setting-up-a-charity">
-                            <span class="fa fa-3x fa-file-text" aria-hidden="true"></span>
+                            <span class="fal fa-book fa-3x" aria-hidden="true"></span>
                             <span class="underline">Setting up an organisation</span>
                         </a>
                     </h3>
@@ -66,7 +66,7 @@
                 <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3 mdc-layout-grid__cell--span-12-tablet mdc-layout-grid__cell--span-12-phone">
                     <h3>
                         <a href="/funding">
-                            <span class="fa fa-3x fa-money" aria-hidden="true"></span>
+                            <span class="fal fa-money-bill fa-3x" aria-hidden="true"></span>
                             <span class="underline">Funding for my project</span>
                         </a>
                     </h3>
@@ -74,7 +74,7 @@
                 <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3 mdc-layout-grid__cell--span-12-tablet mdc-layout-grid__cell--span-12-phone">
                     <h3>
                         <a href="/events">
-                            <span class="fa fa-3x fa-users" aria-hidden="true"></span>
+                            <span class="fal fa-graduation-cap fa-3x" aria-hidden="true"></span>
                             <span class="underline">Training courses &amp; events</span>
                         </a>
                     </h3>
@@ -82,7 +82,7 @@
                 <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3 mdc-layout-grid__cell--span-12-tablet mdc-layout-grid__cell--span-12-phone">
                     <h3>
                         <a href="/jobs">
-                            <span class="fa fa-3x fa-address-card" aria-hidden="true"></span>
+                            <span class="fal fa-briefcase fa-3x" aria-hidden="true"></span>
                             <span class="underline">Jobs in the sector</span>
                         </a>
                     </h3>
