--- a/functions/test-db/json2/scvo/templates/layout.hbs
+++ b/functions/test-db/json2/scvo/templates/layout.hbs
@@ -127,26 +127,22 @@
                                     </ul>
                                 </div>
                                 <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-3-tablet mdc-layout-grid__cell--span-2-desktop">
-                                    <ul class="mdc-list">
-                                        <li class="mdc-list-item">
-                                            <a href="mailto:enquiries@scvo.org.uk">
-                                                <span class="fa fa-envelope"></span> enquiries@scvo.org.uk
-                                            </a>
+                                    <ul class="fa-ul">
+                                        <li>
+                                            <span class="fa-li"><span class="fas fa-envelope-square"></span></span>
+                                            <a href="mailto:enquiries@scvo.org.uk">enquiries@scvo.org.uk</a>
                                         </li>
-                                        <li class="mdc-list-item">
-                                            <a href="tel:+441314748000">
-                                                <span class="fa fa-phone-square"></span> 0131 474 8000
-                                            </a>
+                                        <li>
+                                            <span class="fa-li"><span class="fas fa-phone-square"></span></span>
+                                            <a href="tel:+441314748000">0131 474 8000</a>
                                         </li>
-                                        <li class="mdc-list-item">
-                                            <a href="https://twitter.com/scvotweet">
-                                                <span class="fa fa-twitter-square"></span> Twitter
-                                            </a>
+                                        <li>
+                                            <span class="fa-li"><span class="fab fa-twitter-square"></span></span>
+                                            <a href="https://twitter.com/scvotweet">Twitter</a>
                                         </li>
-                                        <li class="mdc-list-item">
-                                            <a href="https://www.facebook.com/SCVO1939">
-                                                <span class="fa fa-facebook-square"></span> Facebook
-                                            </a>
+                                        <li>
+                                            <span class="fa-li"><span class="fab fa-facebook-square"></span></span>
+                                            <a href="https://www.facebook.com/SCVO1939">Facebook</a>
                                         </li>
                                     </ul>
                                 </div>
