Policy page improvements

--- a/functions/test-db/json2/scvo/scvo-styles.scss
+++ b/functions/test-db/json2/scvo/scvo-styles.scss
@@ -398,6 +398,7 @@ primary-dark: #251032
     @include theme-colours('projects');
 }
 .search-result.scvo-cms-post,
+.gist.scvo-cms-post,
 .related-posts,
 .post,
 .blogs,
@@ -635,6 +636,9 @@ a:hover {
             }
         }
     }
+}
+.home,
+.policy-research {
     .latest-content {
         padding: $spacing-unit/2 0 $spacing-unit*2;
         h2 {
@@ -680,6 +684,7 @@ a:hover {
         line-height: 1.8;
     }
 }
+.policy-research .latest-content .gist,
 .home .latest-content .gist,
 .post-related .gist {
     box-shadow: none;
@@ -1192,6 +1197,7 @@ a:hover {
 .digital.charter-fund.projects .page-info,
 .digital.cyber-resilience.projects .page-info,
 .projects-campaigns.terrific-trustees.search .page-info,
+.policy-research .scvo-cms-page-20027 .page-info,
 .blogs .page-sidebar .page-info,
 .policy-research.briefings-consultation-responses .mdc-card__actions,
 .policy-research.research .mdc-card__actions,
@@ -1248,7 +1254,7 @@ a:hover {
     letter-spacing: normal;
     line-height: 1.7rem;
     margin: 0;
-    padding: 0;
+    padding: 0 0 $spacing-unit/2;
     font-weight: 600 !important;
 }
 h1.mdc-typography--title {
