Wee styling improvements

--- a/functions/test-db/json2/scvo/scvo-styles.scss
+++ b/functions/test-db/json2/scvo/scvo-styles.scss
@@ -1208,6 +1208,12 @@ a:hover {
     display: none;
 }
 
+.digital {
+    .heading h1.mdc-card__title--large {
+        font-size: 2.2rem;
+        line-height: 2.7rem;
+    }
+}
 .digital.about {
     .page-info {
         display: none;
