--- a/functions/test-db/json2/scvo/templates/digital.hbs
+++ b/functions/test-db/json2/scvo/templates/digital.hbs
@@ -15,17 +15,19 @@
         </div>
     </div>
 </div>
-<div class="container-fluid">
+<div class="container-fluid heading">
     {{> breadcrumbs}}
     <div class="mdc-layout-grid">
         <div class="mdc-layout-grid__inner">
             <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-9 content page-content">
-                <h1>Helping people and third sector organisations in Scotland develop their digital potential</h1>
-                <a href="/digital/about">Find out more</a>
+                <h1 class="mdc-card__title mdc-card__title--large">
+                    Helping people and third sector organisations in Scotland develop their digital potential
+                    <a href="/digital/about" class="mdc-card__subtitle">Find out more</a>
+                </h1>
             </div>
             <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3 cta page-cta">
                 <a href="/digital/about" class="mdc-button mdc-button--raised pull-right">Sign up for our e:bulletin&ensp;<i class="fa fa-envelope-open-o" aria-hidden="true"></i></a>
-                <a href="https://twitter.com/digiscot" class="mdc-button mdc-button--raised pull-right" target="_blank">Follow us on Twitter&ensp;<i class="fa fa-twitter" aria-hidden="true"></i></a>
+                <a href="https://twitter.com/digiscot" class="mdc-button mdc-button--raised pull-right" target="_blank">Follow us on Twitter&ensp;<i class="fab fa-twitter" aria-hidden="true"></i></a>
             </div>
         </div>
     </div>
@@ -43,27 +45,27 @@
                         </li>
                         {{/each}}
                     </ul>
-                    <a class="mdc-button mdc-button--raised" href="/events?type=digital">Find more events</a>
+                    <a class="mdc-button mdc-button--raised v-margin" href="/events?type=digital">Find more events</a>
                 </div>
                 <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
                     <h2>Digital Pioneers</h2>
                     <div class="mdc-card">
                         <section class="mdc-card__primary">
-                            <h1 class="mdc-card__title mdc-card__title--large">iConnect North East</h1>
+                            <h1 class="mdc-card__title">iConnect North East</h1>
                         </section>
                         <section class="mdc-card__supporting-text">
                             <p><strong>From Facebook campaigns to Google Analytics, iConnect North East tell us what digital has to offer.</strong></p>
                             <p>We’ve always used digital as an organisation; it plays an important role for us to get the day to day work done. <a href="/digital/evolution/pioneers/iconnect-north-east">Read more</a></p>
                         </section>
                     </div>
-                    <a class="mdc-button mdc-button--raised" href="/digital/evolution/digital-pioneers">Read more case studies</a>
+                    <a class="mdc-button mdc-button--raised v-margin" href="/digital/evolution/digital-pioneers">More case studies</a>
                 </div>
                 <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
                     <h2>Blogs</h2>
                     <ul class="v-margin supplimentary-list">
                         {{{supplimentaryResponses.related_posts.hits.hits.[0]._source.rendered.list}}}
                     </ul>
-                    <a class="mdc-button mdc-button--raised" href="/digital/blogs">Explore our blog posts</a>
+                    <a class="mdc-button mdc-button--raised v-margin" href="/digital/blogs">Explore our blog posts</a>
                 </div>
             </div>
         </div>
