--- a/functions/test-db/json2/scvo/templates/policy.hbs
+++ b/functions/test-db/json2/scvo/templates/policy.hbs
@@ -20,8 +20,6 @@
 
     {{{primaryResponse.hits.hits.[0]._source.rendered.full}}}
 
-    <hr />
-
     <div class="mdc-layout-grid latest-content">
         <div class="mdc-layout-grid__inner">
             <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-12-tablet mdc-layout-grid__cell--span-12-phone">
@@ -71,16 +69,16 @@
                     <section class="mdc-card__primary">
                         <h1 class="mdc-card__title mdc-card__title--large">Evidence Library</h1>
                     </section>
-                    <section class="mdc-card__supporting-text">The Interactive Evidence Library is a resource for anyone interested in learning about the third sector in Scotland.</section>
+                    <section class="mdc-card__supporting-text">A resource for anyone interested in learning about the third sector in Scotland.</section>
                     <section class="mdc-card__actions"><a class="mdc-card__action" ng-reflect-router-link="/policy-research/evidence-libr" href="/policy-research/evidence-library">Find out more</a></section>
                 </div>
             </div>
             <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-6-tablet mdc-layout-grid__cell--span-12-phone">
                 <div class="mdc-card">
                     <section class="mdc-card__primary">
-                        <h1 class="mdc-card__title mdc-card__title--large">Policy committee</h1>
+                        <h1 class="mdc-card__title mdc-card__title--large">Policy Committee</h1>
                     </section>
-                    <section class="mdc-card__supporting-text">The Policy Committee advises us on policies which reflect the best interests of the third sector in Scotland.</section>
+                    <section class="mdc-card__supporting-text">Advising us on policies which reflect the best interests of the third sector in Scotland.</section>
                     <section class="mdc-card__actions"><a class="mdc-card__action" ng-reflect-router-link="/policy-research/policy-commit" href="/policy-research/policy-committee">Find out more</a></section>
                 </div>
             </div>
