--- a/functions/test-db/json2/scvo/templates/search.hbs
+++ b/functions/test-db/json2/scvo/templates/search.hbs
@@ -15,7 +15,7 @@
                         <option value="scvo-cms-post" {{#compare params.query.type "===" "scvo-cms-post"}}selected{{/compare}}>Blog posts</option>
                         <option value="scvo-cms-page" {{#compare params.query.type "===" "scvo-cms-page"}}selected{{/compare}}>Pages</option>
                         <option value="scvo-event" {{#compare params.query.type "===" "scvo-event"}}selected{{/compare}}>Training &amp; events</option>
-                        <option value="goodmoves-job" {{#compare params.query.type "===" "goodmoves-job"}}selected{{/compare}}>Goodmoves jobs</option>
+                        <option value="goodmoves-legacy" {{#compare params.query.type "===" "goodmoves-legacy"}}selected{{/compare}}>Goodmoves jobs</option>
                         <option value="scvo-member" {{#compare params.query.type "===" "scvo-member"}}selected{{/compare}}>SCVO member organisations</option>
                         <option value="digital-charter-signatory" {{#compare params.query.type "===" "digital-charter-signatory"}}selected{{/compare}}>Digital Participation Charter signatories</option>
                         <option value="funding-scotland-fund" {{#compare params.query.type "===" "funding-scotland-fund"}}selected{{/compare}}>Funding Scotland funds</option>
