Rejigged head tags in context and updated routes

--- a/functions/test-db/json2/scvo/templates/funding-updates-link-gen.hbs
+++ b/functions/test-db/json2/scvo/templates/funding-updates-link-gen.hbs
@@ -28,21 +28,21 @@
 
         <div class="">
             <label>
-                Date from: 
+                <strong>Date from: </strong>
                 <input type="date" id="link-gen-from">
             </label>
         </div>
 
         <div class="">
             <label>
-                Date to:
+                <strong>Date to: </strong>
                 <input type="date" id="link-gen-to">
             </label>
         </div>
 
         <div class="">
-            Generated link: 
-            <a href="#" target="_blank" id="link-gen-link"></a>
+            <strong>Generated link: </strong>
+            <span id="link-gen-link"></span>
         </div>
     </div>
 </div>
